--- a/app/src/main/res/layout/item_memo_normal.xml
+++ b/app/src/main/res/layout/item_memo_normal.xml
@@ -9,9 +9,6 @@
             name="viewModel"
             type="com.hmju.memo.viewModels.MainViewModel" />
 
-        <variable
-            name="listener"
-            type="com.hmju.memo.base.BaseViewHolder.BaseClickListener" />
 
         <variable
             name="item"
@@ -22,7 +19,7 @@
         style="@style/MemoRootStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:turtleClick="@{()->listener.memoClick(item)}">
+        app:turtleClick="@{()->viewModel.memoDetail(item)}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
