--- a/app/src/main/res/layout/fragment_memo_detail.xml
+++ b/app/src/main/res/layout/fragment_memo_detail.xml
@@ -21,7 +21,7 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:visibility="@{(viewModel.memoInfo.imgList == null) ? View.GONE : View.VISIBLE}"
+            app:imgList="@{viewModel.memoInfo.imgList}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
             tools:visibility="gone" />
