--- a/app/src/main/res/layout/item_memo_detail_image.xml
+++ b/app/src/main/res/layout/item_memo_detail_image.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="imgUrl"
             type="String" />
@@ -20,7 +19,7 @@
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
-            app:memoDetailImg="@{imgUrl}" />
+            app:bindImg="@{imgUrl}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
