2020. 09. 07 주홍민 - 오늘 작업 내역 반영

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -42,4 +42,11 @@
     </declare-styleable>
     <!-- [e] BottomToolbar Attrs -->
 
+    <declare-styleable name="CustomBottomSheetBehavior">
+        <attr name="bottomSheet_peekHeight" format="dimension" />
+        <attr name="bottomSheet_hideable" format="boolean"/>
+        <attr name="bottomSheet_skipHalfExpand" format="boolean"/>
+        <attr name="bottomSheet_skipCollapsed" format="boolean"/>
+    </declare-styleable>
+
 </resources>
