--- a/app/src/main/res/layout/activity_memo_detail.xml
+++ b/app/src/main/res/layout/activity_memo_detail.xml
@@ -2,21 +2,65 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    
+
     <data>
-        
+
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.hmju.memo.viewModels.MemoDetailViewModel" />
     </data>
-    
-    <com.hmju.memo.base.HeaderView
-        android:layout_width="match_parent"
-        app:header_type="none"
-        android:layout_height="match_parent">
 
-        
-        
-    </com.hmju.memo.base.HeaderView>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <!-- 이미지  -->
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:transitionName="rootView"
+            app:imgList="@{viewModel.memoInfo.imgList}"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="gone" />
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewPager">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <!-- 제목 -->
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_size_10"
+                    android:textSize="@dimen/text_size_20"
+                    app:commonHtmlText="@{viewModel.memoInfo.title}"
+                    tools:text="안녕하세요." />
+
+                <!-- 내용  -->
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_size_10"
+                    android:maxLength="400"
+                    android:textSize="@dimen/text_size_20"
+                    app:commonHtmlText="@{viewModel.memoInfo.contents}"
+                    tools:text="안녕하세요." />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
