--- a/app/src/main/res/layout/item_memo_detail_image.xml
+++ b/app/src/main/res/layout/item_memo_detail_image.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="imgUrl"
             type="String" />
@@ -17,9 +18,9 @@
             android:layout_height="0dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
+            app:bindImg="@{imgUrl}"
             app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:bindImg="@{imgUrl}" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
