--- a/app/src/main/res/xml/scene_memo.xml
+++ b/app/src/main/res/xml/scene_memo.xml
@@ -9,7 +9,7 @@
 
         <OnSwipe
             motion:dragDirection="dragUp"
-            motion:touchAnchorId="@id/container"
+            motion:touchAnchorId="@id/rvContents"
             motion:touchAnchorSide="top" />
 
     </Transition>
@@ -19,7 +19,7 @@
 
         <!-- Header ToolBar 영역 -->
         <Constraint
-            android:id="@+id/clHeaderToolbar"
+            android:id="@+id/headerBlurView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_100"
             motion:layout_constraintTop_toTopOf="parent">
@@ -34,7 +34,7 @@
             android:layout_marginLeft="@dimen/size_10"
             android:layout_marginBottom="@dimen/size_10"
             android:alpha="1.0"
-            motion:layout_constraintBottom_toBottomOf="@+id/clHeaderToolbar"
+            motion:layout_constraintBottom_toBottomOf="@+id/headerBlurView"
             motion:layout_constraintLeft_toLeftOf="parent">
 
         </Constraint>
@@ -46,7 +46,7 @@
             android:layout_height="@dimen/size_50"
             android:layout_marginRight="@dimen/size_10"
             android:layout_marginBottom="@dimen/size_5"
-            motion:layout_constraintBottom_toBottomOf="@+id/clHeaderToolbar"
+            motion:layout_constraintBottom_toBottomOf="@+id/headerBlurView"
             motion:layout_constraintRight_toRightOf="parent">
 
             <CustomAttribute
@@ -61,11 +61,11 @@
 
         <!-- Contents 영역 -->
         <Constraint
-            android:id="@+id/container"
+            android:id="@+id/rvContents"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             motion:layout_constraintBottom_toTopOf="@+id/bottomToolBar"
-            motion:layout_constraintTop_toBottomOf="@+id/clHeaderToolbar">
+            motion:layout_constraintTop_toBottomOf="@+id/headerBlurView">
 
         </Constraint>
 
@@ -76,7 +76,7 @@
 
         <!-- Header ToolBar 영역 -->
         <Constraint
-            android:id="@+id/clHeaderToolbar"
+            android:id="@+id/headerBlurView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_70"
             motion:layout_constraintTop_toTopOf="parent">
@@ -91,7 +91,7 @@
             android:layout_marginLeft="@dimen/size_10"
             android:layout_marginTop="@dimen/size_10"
             android:alpha="0.0"
-            motion:layout_constraintBottom_toTopOf="@+id/clHeaderToolbar"
+            motion:layout_constraintBottom_toTopOf="@+id/headerBlurView"
             motion:layout_constraintLeft_toLeftOf="parent">
 
         </Constraint>
@@ -103,7 +103,7 @@
             android:layout_height="@dimen/size_20"
             android:layout_marginRight="@dimen/size_20"
             android:layout_marginBottom="@dimen/size_5"
-            motion:layout_constraintBottom_toBottomOf="@+id/clHeaderToolbar"
+            motion:layout_constraintBottom_toBottomOf="@+id/headerBlurView"
             motion:layout_constraintRight_toRightOf="parent">
 
             <CustomAttribute
@@ -118,7 +118,7 @@
 
         <!-- Contents 영역 -->
         <Constraint
-            android:id="@+id/container"
+            android:id="@+id/rvContents"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             motion:layout_constraintBottom_toTopOf="@+id/bottomToolBar"
