--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,20 @@
             app:viewModel="@{viewModel}" />
 
         <!-- Header 영역 -->
-        <com.hmju.memo.widget.BlurView
+        <com.hmju.memo.widget.blurView.BlurView
             android:id="@+id/headerBlurView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_100"
             app:blurRadius="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:overlayColor="#19FFFFFF" />
+
+        <View
+            android:id="@+id/bgHeader"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_100"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <!-- 타이틀 뷰 -->
         <androidx.appcompat.widget.AppCompatTextView
@@ -67,7 +74,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <!-- ToolBar View -->
-        <com.hmju.memo.widget.BottomToolbar
+        <com.hmju.memo.widget.bottomToolbar.BottomToolbar
             android:id="@+id/bottomToolBar"
             android:layout_width="match_parent"
             android:layout_height="?android:actionBarSize"
