2020. 09. 07 주홍민 - 오늘 작업 내역 반영

--- a/app/src/main/res/layout/activity_memo_detail.xml
+++ b/app/src/main/res/layout/activity_memo_detail.xml
@@ -151,14 +151,31 @@
                     android:layout_marginTop="@dimen/margin_size_10"
                     android:layout_marginRight="@dimen/margin_size_10">
 
-                    <!-- 사진 추가 버튼 -->
-                    <com.google.android.material.button.MaterialButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/str_add_photo"
+                    <!-- 카메라 추가 버튼 -->
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/imgCamera"
+                        android:layout_width="@dimen/size_40"
+                        android:layout_height="@dimen/size_40"
+                        android:adjustViewBounds="true"
+                        app:dayResId="@{@drawable/ic_add_camera_black}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:nightResId="@{@drawable/ic_add_camera_white}"
+                        tools:src="@drawable/ic_add_camera_black" />
+
+                    <!-- 사진 추가 버튼 -->
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="@dimen/size_40"
+                        android:layout_height="@dimen/size_40"
+                        android:layout_marginLeft="@dimen/margin_size_5"
+                        android:adjustViewBounds="true"
+                        app:dayResId="@{@drawable/ic_add_photo_black}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@+id/imgCamera"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:nightResId="@{@drawable/ic_add_photo_white}"
+                        tools:src="@drawable/ic_add_photo_black" />
 
                     <!-- 수정 날짜. -->
                     <com.google.android.material.textview.MaterialTextView
