2020. 09. 13 주홍민 - 메모장 API 수정에 대한 처리 - EditText 2-Way Biding 처리 추가.

--- a/app/src/main/res/layout/activity_memo_detail.xml
+++ b/app/src/main/res/layout/activity_memo_detail.xml
@@ -105,10 +105,10 @@
                         android:imeOptions="actionNext"
                         android:inputType="text"
                         android:maxLength="40"
-                        android:text="@={viewModel.changeData.title}"
                         android:textColor="@color/colorBlack"
                         android:textSize="@dimen/text_size_20"
                         app:editTextScrollListener="@{viewModel}"
+                        app:htmlText="@={viewModel.changeData.title}"
                         app:isTitle="@{true}"
                         tools:text="안녕하세요" />
 
@@ -135,10 +135,10 @@
                         android:maxLength="400"
                         android:minLines="3"
                         android:scrollbars="vertical"
-                        android:text="@={viewModel.changeData.contents}"
                         android:textColor="@color/colorBlack"
                         android:textSize="@dimen/text_size_20"
                         app:editTextScrollListener="@{viewModel}"
+                        app:htmlText="@={viewModel.changeData.contents}"
                         app:isTitle="@{false}"
                         tools:text="@string/large_text" />
 
