--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@+id/headerBlurView"
             app:memoData="@{viewModel.pagedList}"
             app:viewModel="@{viewModel}" />
 
@@ -34,15 +35,14 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_100"
             app:blurRadius="10dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:overlayColor="#19FFFFFF" />
 
-        <View
-            android:id="@+id/bgHeader"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_100"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+<!--        <View-->
+<!--            android:id="@+id/bgHeader"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/size_100"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            />-->
 
         <!-- 타이틀 뷰 -->
         <androidx.appcompat.widget.AppCompatTextView
@@ -51,10 +51,7 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textColor="@color/colorBlack"
-            android:textSize="@dimen/text_size_20"
-            app:layout_constraintBottom_toBottomOf="@+id/clHeaderToolbar"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/clHeaderToolbar" />
+            android:textSize="@dimen/text_size_20"/>
 
         <!-- 프로필 이미지 뷰 -->
         <com.google.android.material.card.MaterialCardView
