--- a/app/src/main/res/layout/item_memo_normal.xml
+++ b/app/src/main/res/layout/item_memo_normal.xml
@@ -53,7 +53,7 @@
                 android:paddingRight="@dimen/padding_size_10"
                 android:textColor="@color/colorBlack"
                 android:textSize="@dimen/text_size_14"
-                app:commonHtmlText="@{item.contents}"
+                app:htmlText="@{item.contents}"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title"
                 tools:text="@string/large_text" />
 
