--- a/app/src/main/res/xml/scene_memo.xml
+++ b/app/src/main/res/xml/scene_memo.xml
@@ -27,12 +27,12 @@
         </Constraint>
 
         <!-- 헤더 배경 영역 -->
-        <Constraint
-            android:id="@+id/bgHeader"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_100"
-            motion:layout_constraintTop_toTopOf="parent"
-            />
+<!--        <Constraint-->
+<!--            android:id="@+id/bgHeader"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/size_100"-->
+<!--            motion:layout_constraintTop_toTopOf="parent"-->
+<!--            />-->
 
         <!-- 타이틀 영역 -->
         <Constraint
