2020. 09. 13 주홍민 - Memo 데이터 가져오는 JSON 데이터 모델 수정

--- a/app/src/main/res/layout/activity_memo_detail.xml
+++ b/app/src/main/res/layout/activity_memo_detail.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:imgList="@{viewModel.changeData.imgList}"
+                    app:fileList="@{viewModel.changeData.fileList}"
                     tools:visibility="gone" />
 
                 <RadioGroup
