--- a/app/src/main/res/layout/fragment_memo_detail.xml
+++ b/app/src/main/res/layout/fragment_memo_detail.xml
@@ -21,7 +21,7 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:imgList="@{viewModel.changeData.imgList}"
+            app:fileList="@{viewModel.changeData.fileList}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
             tools:visibility="gone" />
