--- a/app/src/main/res/layout/item_memo_detail_image.xml
+++ b/app/src/main/res/layout/item_memo_detail_image.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="imgUrl"
-            type="String" />
+            name="item"
+            type="com.hmju.memo.model.memo.FileItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +18,7 @@
             android:layout_height="0dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            app:bindImg="@{imgUrl}"
+            app:bindImg="@{item.filePath}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent" />
 
